# turnstatClient

./: readme.md  stack.yaml  turnstatClient.cabal
app/: Main.hs
src/: Client.hs  CmdParser.hs  Lib.hs  Process.hs  Types.hs
test/: Spec.hs
