name:                turnstatClient
version:             0.1.0.0
synopsis:            A TurnStat v3.0.1 Client
description:         Please see README.md
homepage:            https://github.com/DanielCardonaRojas/turnstatClient#readme.md
license:             BSD3
license-file:        LICENSE
author:              Daniel Cardona Rojas
maintainer:          d.cardona.rojas@gmail.com
copyright:           2016 Daniel Cardona Rojas
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Client
                     , CmdParser
  build-depends:       base >= 4.7 && < 5
                     , text
                     , wreq
                     , string-conversions
                     , random
                     , optparse-applicative
                     , aeson
                     , mtl
                     , lens-aeson
                     , time
                     , lens

  default-language:    Haskell2010

executable turnstatClient
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turnstatClient
  default-language:    Haskell2010

test-suite turnstatClient-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , turnstatClient
                     , hspec
                     , wreq
                     , mtl
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DanielCardonaRojas/turnstatClient
